#ifndef DOCENTE_H
#define DOCENTE_H

typedef struct Docente
{
    int id;
    char nome[256];
    char login[256];
    char senha[128];

    int table_size;
} Docente;

#endif