#ifndef EVASAO_H
#define EVASAO_H

typedef struct Evasao
{
    int id;
    char motivo[2048];
    

} Evasao;


#endif