erDiagram
    CURSO {
        int id PK
        char nome
        char codigo
        int carga_horaria_total
        int qtd_disciplinas
    }

    DISCIPLINA {
        int id PK
        char nome
        char codigo
        int carga_horaria_total
        int qtd_turma
    }

    DOCENTE {
        int id PK
        char nome
        char login
        char senha
    }

    TURMA {
        int id PK
        char codigo
        int docente_id FK "Referência a Docente"
        int id_disciplina FK "Referência a Disciplina"
        int qtd_matricula
    }

    DISCENTE {
        int id PK
        char nome
        int numero_matricula
    }

    MATRICULA {
        int id PK
        float nota_teorica
        float nota_pratica
        int tempo_ausente
        int aulas_ausente
        bool tem_evasao
        char status
        int id_turma FK "Referência a Turma"
        int discente_id FK "Referência a Discente"
        int id_evasao FK "Referência a Evasao (Opcional)"
    }

    EVASAO {
        int id PK
        char motivo
    }

   

    CURSO ||--o{ DISCIPLINA : "possui (id_disciplinas)"
    DISCIPLINA ||--o{ TURMA : "oferece (id_turma)"
    DOCENTE ||--o{ TURMA : "ministra (docente_id)"
    TURMA ||--o{ MATRICULA : "contém (id_matricula)"
    DISCENTE ||--o{ MATRICULA : "realiza (discente_id)"
    MATRICULA |o--o| EVASAO : "registra (id_evasao)"
